objects/zkusps__Shipment__c.object
<CustomObject>
    <customHelpPage>zkusps__shipmentHelp</customHelpPage>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>USPS Shipments (Account)</relationshipLabel>
        <relationshipName>USPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tracking_number_Shipped_Date__c</fullName>
        <description>SCH-0001</description>
        <formula>zkusps__trackingNumber__c +&apos;(&apos;+TEXT(MONTH( zkusps__shipDate__c ))+&quot;/&quot; +TEXT(DAY(zkusps__shipDate__c))+&quot;/&quot; +TEXT(YEAR(zkusps__shipDate__c))+&apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracking number + Shipped Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>USPS Shipments (Contact)</relationshipLabel>
        <relationshipName>USPS_Shipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__EntryFacility__c</fullName>
        <label>Entry Facility</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__EstimatedDeliveryDate__c</fullName>
        <label>Estimated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkusps__HideSenderAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Sender Address on the label</description>
        <inlineHelpText>Hide Sender Address on the label</inlineHelpText>
        <label>Hide Sender Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__LabelImageResolution__c</fullName>
        <label>Label Image Resolution</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__LabelImageRotation__c</fullName>
        <label>Label Image Rotation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__LabelImageSize__c</fullName>
        <label>Label Image Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__LabelInsertedEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Label Inserted Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__POZipCode__c</fullName>
        <label>PO ZipCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__PrintStatus__c</fullName>
        <label>Print Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ReplyPayOnUsePostage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay On Use Returns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__ReturnedToSender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returned To Sender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__SortType__c</fullName>
        <label>Sort Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__TransactionID__c</fullName>
        <label>TransactionID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__USPS_Endicia_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>USPS Endicia Preference</label>
        <referenceTo>zkusps__EndiciaPreference__c</referenceTo>
        <relationshipLabel>USPS Shipments</relationshipLabel>
        <relationshipName>USPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__bypassAddressValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is recommended that the address be validated. If bypassed, address validation is the customer&apos;s responsibility</description>
        <inlineHelpText>It is recommended that the address be validated. If bypassed, address validation is the customer&apos;s responsibility</inlineHelpText>
        <label>Bypass Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__customsInformation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customs Information</label>
        <referenceTo>zkusps__CustomsInformation__c</referenceTo>
        <relationshipLabel>USPS Shipments</relationshipLabel>
        <relationshipName>USPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__finalTotalAmount__c</fullName>
        <label>Final Total Amount (USD)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__fromCity__c</fullName>
        <label>From City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__fromCompany__c</fullName>
        <label>From Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__fromEmail__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkusps__fromName__c</fullName>
        <label>From Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__fromPhone__c</fullName>
        <label>From Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__fromPostalCode__c</fullName>
        <label>From Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__fromState__c</fullName>
        <label>From State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__fromStreet__c</fullName>
        <label>From Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkusps__isDelivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__labelImageType__c</fullName>
        <label>Label Image Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__lastTrackUpdateStatusCode__c</fullName>
        <description>For a full list of USPS tracking codes please go to 

zenkraft.com/usps-codes</description>
        <inlineHelpText>USPS Status Code:

-1	Not Found
0	Found–No Status
A	Logged at USPS
I	Scanned in Route
D	Delivered
L	Notice Left for Recipient
F	Forwarded to New Address
R	Returned to Sender
U	Undeliverable
N	New Item
X	Other</inlineHelpText>
        <label>Last Track Update Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__lastTrackUpdateStatus__c</fullName>
        <label>Last Track Update Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__lastTrackUpdateTime__c</fullName>
        <label>Last Track Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkusps__mailClass__c</fullName>
        <label>Mail Class</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Preference</label>
        <referenceTo>zkusps__Preference__c</referenceTo>
        <relationshipLabel>USPS Shipments</relationshipLabel>
        <relationshipName>USPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__replyPostage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reply Postage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__shipDateAdvance__c</fullName>
        <label>Ship Date Advance</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__shipDate__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkusps__shipmentDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the shipment has been canceled and a refund has been issued</description>
        <inlineHelpText>Indicates that the shipment has been canceled and a refund has been issued</inlineHelpText>
        <label>Shipment Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__shipmentNotes__c</fullName>
        <label>Shipment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkusps__shipmentProcessingCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Processing Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__shippingPreference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Preference</label>
        <referenceTo>zkusps__ShippingPreference__c</referenceTo>
        <relationshipLabel>USPS Shipments</relationshipLabel>
        <relationshipName>USPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__toAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>USPS Shipments</relationshipLabel>
        <relationshipName>USPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__toCity__c</fullName>
        <label>To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__toCompany__c</fullName>
        <label>To Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__toContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>USPS Shipments</relationshipLabel>
        <relationshipName>USPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__toCountry__c</fullName>
        <label>To Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__toEmail__c</fullName>
        <label>To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkusps__toLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>USPS Shipments</relationshipLabel>
        <relationshipName>USPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__toName__c</fullName>
        <label>To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__toOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>USPS Shipments</relationshipLabel>
        <relationshipName>USPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__toPhone__c</fullName>
        <label>To Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__toPostalCode__c</fullName>
        <label>To Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__toState__c</fullName>
        <label>To State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__toStreet__c</fullName>
        <label>To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkusps__trackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__userAllowedEditOfRecipientInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Allowed Edit of Recipient Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__yourReference1__c</fullName>
        <label>Your Reference 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__yourReference2__c</fullName>
        <label>Your Reference 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__yourReference3__c</fullName>
        <label>Your Reference 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__zkModKey__c</fullName>
        <label>ZK Mod Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>USPS Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>zkusps__shipmentDeleted__c</columns>
        <columns>zkusps__shipmentNotes__c</columns>
        <columns>zkusps__shipDate__c</columns>
        <columns>zkusps__mailClass__c</columns>
        <columns>zkusps__toName__c</columns>
        <columns>zkusps__toCompany__c</columns>
        <columns>zkusps__toStreet__c</columns>
        <columns>zkusps__toCity__c</columns>
        <columns>zkusps__toState__c</columns>
        <columns>zkusps__toPostalCode__c</columns>
        <columns>zkusps__toAccount__c</columns>
        <filterScope>Everything</filterScope>
        <label>Notes</label>
    </listViews>
    <listViews>
        <fullName>zkusps__All</fullName>
        <columns>NAME</columns>
        <columns>zkusps__shipmentDeleted__c</columns>
        <columns>zkusps__toName__c</columns>
        <columns>zkusps__toCompany__c</columns>
        <columns>zkusps__toStreet__c</columns>
        <columns>zkusps__toCity__c</columns>
        <columns>zkusps__toState__c</columns>
        <columns>zkusps__toPostalCode__c</columns>
        <columns>zkusps__toLead__c</columns>
        <columns>zkusps__toContact__c</columns>
        <columns>zkusps__toAccount__c</columns>
        <columns>zkusps__toOpportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zkusps__Tracking</fullName>
        <columns>NAME</columns>
        <columns>zkusps__trackingNumber__c</columns>
        <columns>zkusps__isDelivered__c</columns>
        <columns>zkusps__lastTrackUpdateTime__c</columns>
        <columns>zkusps__lastTrackUpdateStatusCode__c</columns>
        <columns>zkusps__lastTrackUpdateStatus__c</columns>
        <columns>zkusps__shipmentNotes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tracking</label>
    </listViews>
    <nameField>
        <displayFormat>USPS-Shipment-{00000000}</displayFormat>
        <label>Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USPS Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>